--- a/public/material.html
+++ b/public/material.html
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="jumbotron bg-1 mt-5"><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14132.svg">
+                    <div class="jumbotron bg-white mt-0"><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14132.svg">
                         <p>Las soluciones creativas son fruto de un trabajo previo intenso que incluye el ensayo y el error en pruebas, es producto de aproximaciones y de cambios.</p>
                         <p>Desde los ámbitos de la psicología y la pedagogía, la investigación científica y las teorías no deterministas han permitido desmitificar la visión de la creatividad como una cualidad casi mística que solo algunos individuos poseen. Autores como Amabile (1983), Golen (1983), Boden (1994), Csikszentmihaly y Colodrón (1999) o Sternberg (2006), entienden la creatividad como una capacidad que puede ser desarrollada y que, en consecuencia, puede ser estimulada y enseñada, haciendo especial hincapié en la importancia de la actitud, la motivación y las características del entorno del individuo –el contexto social, cultural, educativo, histórico, etc.– Maslow (1985) consideraba la creatividad como una habilidad deseable en cualquier campo profesional. (Castelló y del Pino, 2019, p.39)</p><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14117.svg">
                         <div class="col-2"> </div>
@@ -215,11 +215,11 @@
                         <p>A continuación, se verán algunos de los métodos más populares para el proceso creativo y la forma como se llevan a cabo. Se relacionan, sobre todo, los más utilizados en el desarrollo de estrategias de comunicación y publicidad:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/linebreak.svg">
                     </div>
                     <div class="jumbotron bg-white mt-5">
-                        <div class="sub-ecored-teme">
+                        <div class="sub-ecored">
                             <div class="row justify-content-center align-items-center">
                                 <div class="col-auto"> </div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14173.svg">
                                 <div class="col-2"> </div>
-                                <h1>Tecnicas creativas: </h1>
+                                <h2>Tecnicas creativas: </h2>
                                 <p>Las técnicas creativas implican el desarrollo de métodos que permiten ver las situaciones desde diferentes aspectos. Para la mayoría de las personas es complicado pensar lateralmente; es decir, salir de lo convencional y proponer soluciones prácticas, pero no comunes. Estas técnicas incentivan el pensamiento disruptivo, la creación de nuevas ideas, el mejoramiento de las ya existentes o la adecuación de soluciones anteriores a problemas actuales.</p>
                                 <p>A continuación, se indican las técnicas más utilizadas para estimular la producción de ideas y su evaluación, de acuerdo con los descrito por la Fundación Neuronilla para la Creatividad y la Innovación (2020)</p>
                             </div>
@@ -229,10 +229,10 @@
                         <div class="sub-ecored-teme">
                             <div class="row justify-content-center align-items-center">
                                 <div class="col-auto"> </div>
-                                <h1>Lluvia de ideas o Brainstorming: </h1>
+                                <h3>Lluvia de ideas o Brainstorming: </h3>
                                 <div class="col-auto"></div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14193.svg">
                                 <div class="col"></div>
-                                <h2>Análisis morfológico</h2>
+                                <h3>Análisis morfológico</h3>
                                 <p>Es una de las técnicas más valiosas para generar gran cantidad de ideas en un corto período de tiempo y se desarrolló en los trabajos tecnológicos de la astrofísica y las investigaciones espaciales llevadas a cabo en los años cuarenta, como resultado de los adelantos del astrónomo Fritz Zwicky.</p>
                                 <p>Es una técnica combinatoria de ideación creativa consistente en descomponer un concepto o problema en sus elementos esenciales o estructuras básicas. Con sus rasgos o atributos se construye una matriz que nos permitirá multiplicar las relaciones entre tales partes. Así pues, en su forma más básica, el análisis morfológico no es más que la generación de ideas por medio de una matriz. Se realiza llevando a cabo los siguientes pasos:</p>
                             </div>
@@ -275,8 +275,8 @@
                         </div>
                     </div>
                     <div class="jumbotron bg-white">
-                        <h2>Matriz ejemplo:<p>Una empresa de lácteos está buscando realizar un nuevo proceso de promoción para su nueva leche saborizada con vitaminas dirigida a adultos mayores:</p>
-                        </h2>
+                        <h3>Matriz ejemplo:<p>Una empresa de lácteos está buscando realizar un nuevo proceso de promoción para su nueva leche saborizada con vitaminas dirigida a adultos mayores:</p>
+                        </h3>
                         <h2>Tabla 1 - Matriz ejemplo combinaciones diferentes, análisis morfológico<img class="img-a img-fluid" src="assets/images/pages/ilustraciones/Grupo_14210.svg"></h2>
                         <h3>Fuente: Fundación Neuronilla para la Creatividad y la Innovación (2021) <div class="col-auto">
                                 <h1>Analogías</h1>
