--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                                 <h3 class="curso-subtitulo" id="curso-titulo-componente">Tecnología en Desarrollo Publicitario</h3>
                                 <h1 class="curso-titulo" id="curso-titulo-tema">Estrategia Creativa</h1>
                                 <div class="brand-line-primary"></div>
-                                <p class="curso-descripcion">Se habla mucho de la creatividad y es un concepto de moda en muchas áreas; desde la superación personal con el concepto de coaching, pasando por la creación de nuevos emprendimientos en lo que hoy se denominan startup, hasta en la investigación científica. Lo cierto es que es inherente al ser humano y podría decirse que está presente en ciertos comportamientos de algunos animales, si se remite al concepto estricto de lo que es creatividad, (la solución de problemas).</p><a class="curso-btn-iniciar btn btn-light" href="main.html"><span>Iniciar curso</span></a>
+                                <p class="curso-descripcion">En el ámbito de la publicidad y la comunicación, la creatividad se hace necesaria e indispensable, ya que los anunciantes están siempre en la búsqueda de agencias o publicistas que realicen para ellos anuncios que marquen la diferencia y den un toque de originalidad y diferenciación a sus productos frente a la competencia. Sin embargo, en la realización publicitaria la creatividad tiene cabida en todos los frentes: medios, estrategias, redacción de textos, creación de imágenes, merchandising y promoción de ventas.</p><a class="curso-btn-iniciar btn btn-light" href="main.html"><span>Iniciar curso</span></a>
                             </div>
                             <div class="col-12 col-lg-6 text-center">
                                 <div class="d-none d-lg-block"><img class="curso-imagen" src="assets/images/header/header_media.svg" /></div>
@@ -52,8 +52,7 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark">
-                            <li> <span>Reconocer XXXXX.</span></li>
-                            <li><span>Valorar XXXX.</span></li>
+                            <li> <span>Establecer el concepto creativo de la campaña teniendo en cuenta el brief.</span></li>
                         </ul>
                     </div>
                 </div>
@@ -143,7 +142,8 @@
                             <strong>Yazmin Rocio Figueroa Pacheco</strong><br /><span class="text-small">Diseño web & producción audiovisual<br /></span></p>
                         <p class="footer-texto"><strong>Edgar Mauricio Cortes</strong><br />
                             <strong>Magdi Khalifah Gamboa</strong><br />
-                            <strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
+                            <strong>Gustavo Adolfo Marún Suárez</strong><br />
+                            <strong>Ricardo Alfonso González Vargas</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
