--- a/public/info.html
+++ b/public/info.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>Información del programa: Servicio al cliente</title>
+        <title>Tecnología en Desarrollo Publicitario</title>
         <meta meta name="description" content="Ruta de aprendizaje programa Servicio al cliente.">
         <link rel="icon" type="image/svg+xml" href="assets/images/logos/senaLogo.svg">
         <link rel="stylesheet" href="assets/fonts/feather/feather.css">
@@ -23,12 +23,12 @@
                     <div class="curso-portada">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-6">
-                                <h3 class="curso-subtitulo">Servicio al cliente</h3>
+                                <h3 class="curso-subtitulo">Tecnología en Desarrollo Publicitario</h3>
                                 <h1 class="curso-titulo">Información del programa</h1>
                                 <div class="brand-line-primary"></div>
                                 <p class="curso-descripcion">
                                 <ul class="text-white">
-                                    <li> <span><strong>Nombre del programa:</strong> Servicio al cliente</span></li>
+                                    <li> <span><strong>Nombre del programa:</strong> Tecnología en Desarrollo Publicitario</span></li>
                                     <li> <span><strong>Código:</strong> 13530001</span></li>
                                     <li> <span><strong>Total Horas:</strong> 48</span></li>
                                     <li> <span><strong>Duración en semanas:</strong> 4 semanas</span></li>
@@ -64,7 +64,7 @@
             <div class="container">
                 <h1> 2. Justificación<br> del programa</h1>
                 <div class="brand-line-primary"></div>
-                <p class="mt-5">El SENA presenta el curso complementario denominado Servicio al Cliente, el cual brinda respuesta a los requerimientos de las empresas para desarrollar altos procesos de cualificación en sus colaboradores.</p>
+                <p class="mt-5">El SENA presenta el curso complementario denominado Tecnología en Desarrollo Publicitario, el cual brinda respuesta a los requerimientos de las empresas para desarrollar altos procesos de cualificación en sus colaboradores.</p>
                 <p>Partiendo de la premisa organizacional que indica que los clientes son la razón de ser de cualquier empresa, en un entorno globalizado donde las comunicaciones son cada vez más ágiles, el consumidor es el que decide cuándo, dónde y por cuánto tiempo comprar, es importante para los empresarios contar con talento humano capaz de fidelizar y retener clientes que contribuyan con la sostenibilidad económica de sus unidades productivas.</p>
                 <p>El servicio y la atención al cliente, son y deben ser un asunto de importancia para cualquier organización, de igual manera analizar el servicio al cliente de una compañía, permite validar si las características y funciones del producto o servicio logran satisfacer las necesidades de los usuarios. Conforme con esto, se debe generar estrategias para que las empresas presten un excelente servicio al cliente, pues es el pilar y la base fundamental para conquistar al cliente.</p>
             </div>
@@ -147,7 +147,8 @@
                             <strong>Yazmin Rocio Figueroa Pacheco</strong><br /><span class="text-small">Diseño web & producción audiovisual<br /></span></p>
                         <p class="footer-texto"><strong>Edgar Mauricio Cortes</strong><br />
                             <strong>Magdi Khalifah Gamboa</strong><br />
-                            <strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
+                            <strong>Gustavo Adolfo Marún Suárez</strong><br />
+                            <strong>Ricardo Alfonso González Vargas</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
