--- a/public/pages/1-tema.html
+++ b/public/pages/1-tema.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="header-ecored">
-        <h1>1. ESTRATEGIA CREATIVA </h1>
+        <h1>1. Introducción </h1>
     </div>
     <div class="embed-responsive embed-responsive-16by9 mt-5"><iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/hyaC1DOSYE8" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
     <div class="jumbotron bg-white">
         <p>Se habla mucho de la creatividad y es un concepto de moda en muchas áreas; desde la superación personal con el concepto de coaching, pasando por la creación de nuevos emprendimientos en lo que hoy se denominan startup, hasta en la investigación científica. Lo cierto es que es inherente al ser humano y podría decirse que está presente en ciertos comportamientos de algunos animales, si se remite al concepto estricto de lo que es creatividad, (la solución de problemas)</p>
         <p>Existen casos en la naturaleza que evidencian su presencia en algunas especies; por ejemplo: el ave martín pescador atrapa peces poniendo como carnada frutas o pequeños insectos que consume su presa. El buitre-águila barbado, un ave carroñera que se eleva a una altura considerable para dejar caer huesos en zonas rocosas y de esta forma extraer la médula que es su alimento favorito por la alta concentración de proteína y grasas.</p>
         <div class="row justify-content-center align-items-center mt-5">
-            <div class="col-5"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/474.svg" /></div>
-            <div class="col-5"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/12.svg" /></div>
+            <div class="col-5"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/13.png" /></div>
+            <div class="col-5"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/12.png" /></div>
         </div>
         <div class="row justify-content-center align-items-center">
             <div class="col-2"><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/Grupo_14116.svg" /></div>
@@ -80,7 +80,7 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-auto"> </div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14173.svg" />
                 <div class="col-2"> </div>
-                <h2>Tecnicas creativas: </h2>
+                <h2>1.3.1. Técnicas creativas</h2>
                 <p>Las técnicas creativas implican el desarrollo de métodos que permiten ver las situaciones desde diferentes aspectos. Para la mayoría de las personas es complicado pensar lateralmente; es decir, salir de lo convencional y proponer soluciones prácticas, pero no comunes. Estas técnicas incentivan el pensamiento disruptivo, la creación de nuevas ideas, el mejoramiento de las ya existentes o la adecuación de soluciones anteriores a problemas actuales.</p>
                 <p>A continuación, se indican las técnicas más utilizadas para estimular la producción de ideas y su evaluación, de acuerdo con los descrito por la Fundación Neuronilla para la Creatividad y la Innovación (2020)</p>
             </div>
@@ -90,10 +90,11 @@
         <div class="sub-ecored-teme">
             <div class="row justify-content-center align-items-center">
                 <div class="col-auto"> </div>
-                <h3>Lluvia de ideas o Brainstorming: </h3>
-                <div class="col-auto"></div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14193.svg" />
-                <div class="col"></div>
-                <h3>Análisis morfológico</h3>
+                <h3>1.3.1.1 Lluvia de ideas o Brainstorming: </h3>
+                <div class="col-auto"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14193.svg" />
+                    <div class="col"></div>
+                </div>
+                <h3>1.3.1.2 Análisis morfológico</h3>
                 <p>Es una de las técnicas más valiosas para generar gran cantidad de ideas en un corto período de tiempo y se desarrolló en los trabajos tecnológicos de la astrofísica y las investigaciones espaciales llevadas a cabo en los años cuarenta, como resultado de los adelantos del astrónomo Fritz Zwicky.</p>
                 <p>Es una técnica combinatoria de ideación creativa consistente en descomponer un concepto o problema en sus elementos esenciales o estructuras básicas. Con sus rasgos o atributos se construye una matriz que nos permitirá multiplicar las relaciones entre tales partes. Así pues, en su forma más básica, el análisis morfológico no es más que la generación de ideas por medio de una matriz. Se realiza llevando a cabo los siguientes pasos:</p>
             </div>
@@ -140,7 +141,7 @@
         </h3>
         <h2>Tabla 1 - Matriz ejemplo combinaciones diferentes, análisis morfológico<img class="img-a img-fluid" src="assets/images/pages/ilustraciones/Grupo_14210.svg" /></h2>
         <h3>Fuente: Fundación Neuronilla para la Creatividad y la Innovación (2021) <div class="col-auto">
-                <h1>Analogías</h1>
+                <h1>1.3.1.3 Analogías</h1>
                 <p>Consiste en resolver un problema mediante un rodeo: en vez de atacarlo de frente se compara ese problema o situación con otra cosa. Gordon, creador de la Sinéctica (método creativo basado en el uso de las analogías) insistía en que “se trata de poner en paralelo mediante este mecanismo unos hechos, unos conocimientos o unas disciplinas distintas”. Por ejemplo, un problema empresarial lo intentamos resolver buscando algún problema análogo en otras disciplinas: en la biología, en la historia, en un deporte colectivo, etc.</p>
             </div>
         </h3>
@@ -165,7 +166,7 @@
         <div class="col auto">
             <h2>Intersección:</h2>
             <p>“Se necesita un ciclón a domicilio… una tromba de agua… vertical… las paredes serán cilindros que encajan… cuando no nos servimos de ella, formará un asiento o un elemento decorativo…en servicio será un cilindro…y los chorros de agua partirán del suelo o de las paredes y reconstruirán nuestro ciclón…”</p>
-            <h2>Conexiones morfológicas forzadas</h2>
+            <h2>1.3.1.4 Conexiones morfológicas forzadas</h2>
             <div class="col auto"></div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Trazado_23654.svg" />
             <p>Es una propuesta de Koberg y Bagnall que en realidad es la suma de los principios básicos de dos técnicas: el “Listado de Atributos” creado por R. P. Crawford y las “Relaciones Forzadas” de Charles S. Whiting.</p>
             <p>Es muy potente porque en una primera fase facilita que surjan ideas sobre aspectos que no habíamos tenido en cuenta y en la segunda provoca analogías muy inspiradoras.</p>
@@ -175,7 +176,7 @@
     <div class="jumbotron bg-white">
         <div class="row justify-content-center align-items-center"></div>
         <div class="col auto">
-            <h2>El arte de preguntar</h2>
+            <h2>1.3.1.5 El arte de preguntar</h2>
             <p>Alex Osborn, experto en creatividad y creador del Brainstorming, afirmaba que “la pregunta es la más creativa de las conductas humanas”. Osborn desarrolló una serie de preguntas para el Brainstorming que pueden aplicarse en la exploración del problema. </p>
             <p>Este es un conjunto fundamental de preguntas que se usan para formular en el problema todos los enfoques que sean posibles y, así, abrir la perspectiva que tenemos del problema. También son útiles para la percepción de nuevos usos, aplicaciones o posibilidades de un producto o un servicio.</p>
         </div>
@@ -221,7 +222,7 @@
         <div class="sub-ecored-teme">
             <div class="row justify-content-center align-items-center">
                 <div class="col-auto"></div>
-                <h3>Listas cruzadas</h3>
+                <h3>1.3.1.6 Listas cruzadas</h3>
                 <p>Consiste en hallar ideas confrontando elementos lejanos entre sí, desde el punto de vista morfológico, sintáctico o utilitario para generar nuevas funciones, formas e ideas.</p>
                 <p>Para el desarrollo de esta actividad de ejemplo, se requieren 3 columnas para realizar la misma cantidad de listados diferentes: </p>
                 <p>En la primera columna se escriben los números del 0 al 9, frente a cada uno vamos a escribir un listado de elementos o cosas relacionadas con el problema en cuestión.</p>
@@ -238,14 +239,14 @@
         <div class="sub-ecored-teme">
             <div class="row justify-content-center align-items-center">
                 <div class="col-auto">
-                    <h2>Mapas mentales: </h2>
+                    <h2>1.3.1.7 Mapas mentales</h2>
                     <p>s una técnica creada por Tony Buzan, investigador en el campo de la inteligencia y presidente de la Brain Foundation.</p>
                     <p>La importancia de los mapas mentales radica en que son una expresión de una forma de pensamiento: el pensamiento irradiante. El mapa mental es una técnica gráfica que permite acceder al potencial del cerebro. </p>
                     <p>Su principal aplicación en el proceso creativo es la exploración del problema y la generación de ideas. En la exploración del problema es recomendable su uso para tener distintas perspectivas de este.</p>
                 </div>
                 <div class="col-auto"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/circle.svg" /></div>
                 <p>Los mapas mentales se pueden mejorar y enriquecer con colores, imágenes, códigos y dimensiones que les añaden interés, belleza e individualidad.</p>
-                <h2>SCAMPER</h2>
+                <h2>1.3.1.8 SCAMPER</h2>
                 <p>Es una lista de preguntas que estimulan la generación de ideas. Alex Osborn, el creador del Brainstorming, estableció las primeras. Más tarde fueron dispuestas por Bob Eberle en este mnemotécnico:</p>
                 <ol>
                     <li>S: ¿Sustituir?</li>
@@ -257,7 +258,7 @@
                     <li>R ¿Reordenar? = ¿Invertir?</li>
                 </ol>
                 <div class="col-auto"><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_16267.svg" /></div>
-                <h2>Evaluación de las ideas</h2>
+                <h2>1.3.1.9 Evaluación de las ideas</h2>
                 <p>Durante este proceso se han generado respuestas a las preguntas planteadas; muchas de ellas serán ideas que deben ser evaluadas, de acuerdo con unos criterios que pueden ser elaborados por los componentes del grupo o que ya se han establecido con anterioridad.</p>
             </div>
         </div>
