--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -30,7 +30,7 @@
             <tr>
                 <td> <img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14490.svg" /></td>
                 <td>
-                    <p>✔ Objetivos de comunicación: la función puntual de un objetivo de comunicación es acentuar o modificar conductas, hábitos o comportamientos en el target de campaña. Esencialmente un objetivo de comunicación debe informar adecuadamente, persuadir a través de una propuesta diferencial, dar a conocer claramente dicha propuesta y comunicar correctamente el mensaje; este último en la estrategia de comunicación está representado por la promesa y el reason why (soporte de promesa o argumentación). </p>
+                    <p>✔ Objetivos de comunicación: la función puntual de un objetivo de comunicación es acentuar o modificar conductas, hábitos o comportamientos en el target de campaña. Esencialmente un objetivo de comunicación debe informar adecuadamente, persuadir a través de una propuesta diferencial, dar a conocer claramente dicha propuesta y comunicar correctamente el mensaje; este último en la estrategia de co municación está representado por la promesa y el reason why (soporte de promesa o argumentación). </p>
                 </td>
             </tr>
             <tr>
@@ -72,9 +72,9 @@
                 <p>✔ Creativo: por obvias razones el concepto de una estrategia de comunicación debe ser creativo, la creatividad permite no solo que la idea sea llamativa, sino que se destaque frente a otras.</p>
             </h2>
         </div>
-        <h2>Estructura del concepto creativo<p>El concepto es también un proceso que permite al mensaje tener más definición y a la estrategia creativa un norte, por eso es importante que estos elementos se desarrollen teniendo en cuenta todos los parámetros ya establecidos en el brief y en los antecedentes de la marca.</p>
+        <h2>2.3.1 Estructura del concepto creativo<p>El concepto es también un proceso que permite al mensaje tener más definición y a la estrategia creativa un norte, por eso es importante que estos elementos se desarrollen teniendo en cuenta todos los parámetros ya establecidos en el brief y en los antecedentes de la marca.</p>
         </h2>
-        <h2>Tipo<p>Cada campaña o estrategia de comunicación que se realice está ligada a un momento específico de la marca, producto, servicio o empresa. Cada producto o servicio atraviesa unas etapas durante su proceso comercial y cada una de ellas comprende un proceso de comunicación especial. Estas etapas están consignadas en el ciclo de vida del producto:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/figura.svg" />
+        <h2>2.3.2 Tipo<p>Cada campaña o estrategia de comunicación que se realice está ligada a un momento específico de la marca, producto, servicio o empresa. Cada producto o servicio atraviesa unas etapas durante su proceso comercial y cada una de ellas comprende un proceso de comunicación especial. Estas etapas están consignadas en el ciclo de vida del producto:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/figura.svg" />
             <p>En la gráfica se pueden observar las etapas y el tipo de comunicación que se requiere para cada una de ellas:</p>
             <p>✔ I+D+I: esta es la etapa de ideación del producto o servicio, en este punto no hay comunicación masiva; sin embargo, es posible que en el desarrollo de las pruebas de mercadeo se realicen estrategias de comunicación dirigidas a segmentos muy específicos, con el fin de probar la respuesta del grupo objetivo al nombre del producto, al empaque o al estilo de comunicación que han planteado para hacer ajustes antes de su introducción definitiva al mercado.</p>
             <p>✔ Introducción: en esta etapa el producto es puesto en oferta; es decir, se pone a disposición de los compradores y consumidores. La comunicación que se realiza en este punto es de Lanzamiento; aquí es necesario ser enfático en sus beneficios, tanto el principal como los secundarios y la comunicación se realiza utilizando todos los medios posibles y el concepto debe conectar con el consumidor. En ocasiones y cuando las marcas tienen un alto nivel de posicionamiento, es posible que realicen un Teaser, es decir, una etapa inicial con expectativa, generando inquietud en los consumidores y con ello, generar impulso de compra.</p>
@@ -88,7 +88,7 @@
         <div class="center"></div>
         <div class="row justify-content-center align-items-center"></div>
         <div class="col-auto">
-            <h3>Tono</h3>
+            <h3>2.3.3 Tono</h3>
             <p>El diseño del mensaje es la parte más complicada y demorada del proceso, el concepto es la base para su elaboración y cada parte de él contribuye poco a poco al desarrollo. El tono constituye un elemento muy importante en la elaboración del mensaje y desarrollo de la idea, porque determina en gran medida la empatía que la marca tiene con el grupo objetivo y muestra rasgos muy relevantes de la personalidad de la marca. Es necesario definir el tono de la comunicación teniendo en cuenta todos esos elementos, pues el mercado suele ser susceptible a ciertos aspectos que pueden llegar a ser ofensivos o transgredir la forma de pensar de algunos miembros del mercado. Existen cinco tonos de comunicación básicos:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/call.svg" />
             <table class="default">
                 <tr>
@@ -119,9 +119,9 @@
                     <td> <img class="img-a my-3 img-icon" src="assets/images/pages/ilustraciones/face_5.svg" /></td>
                     <td>
                         <p>5. Aspiracional: es un tono muy eficaz para productos financieros, agencias de viajes y educación, tiene un alto nivel de persuasión, aunque es poco recordativo, es efectivo en el momento en que el mercado objetivo es expuesto al mensaje, de ahí su nivel de uso en campañas en medios digitales como la web y las redes sociales. Tiene un enfoque más alto en el mercado de adultos jóvenes.</p>
-                        <h3>Tema</h3>
+                        <h3>2.3.4 Tema</h3>
                         <p>El tema es un elemento subjetivo y es donde se da rienda suelta a la creatividad, es en este punto donde el target comunicacional realizado anteriormente toma mayor relevancia, pues en cada uno de los detalles descritos en él, se pueden encontrar temas que sean eficaces para el diseño del mensaje. El tema se refiere a un momento, lugar y situación específicos en la que se desarrollará el mensaje, ya sea audiovisual, impreso, digital, textual o auditivo. Se puede tomar como tema una cena familiar; este contiene los tres elementos descritos: cena indica que es en la noche, familiar una situación específica y las posibles personas que intervienen en ella y el lugar porque se puede deducir que será en una casa o en un restaurante. Es importante definir cada uno de estos elementos en la descripción del tema.</p>
-                        <h3>El racional creativo</h3>
+                        <h3>2.3.5 El racional creativo</h3>
                         <p>El racional creativo es un documento que recoge toda la información anterior en una idea concreta; es decir, es la idea en sí, descrita y estructurada. Para su desarrollo es necesario tener en cuenta todos los elementos de la estrategia: descripción del mercado objetivo, target comunicacional y concepto creativo. Adicionalmente, el racional creativo debe tener dentro de su base dos elementos inspiradores que tal vez se hayan detectado en el proceso de investigación y desarrollo del target comunicacional; la propuesta de valor y el key insight.</p>
                     </td>
                 </tr>
