--- a/public/ruta.html
+++ b/public/ruta.html
@@ -165,7 +165,8 @@
                             <strong>Yazmin Rocio Figueroa Pacheco</strong><br /><span class="text-small">Diseño web & producción audiovisual<br /></span></p>
                         <p class="footer-texto"><strong>Edgar Mauricio Cortes</strong><br />
                             <strong>Magdi Khalifah Gamboa</strong><br />
-                            <strong>Gustavo Adolfo Marún Suárez</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
+                            <strong>Gustavo Adolfo Marún Suárez</strong><br />
+                            <strong>Ricardo Alfonso González Vargas</strong><br /> <span class="text-small">Desarrollo front-end<br /></span></p>
                         <p class="footer-texto"><span class="text-small text-uppercase">CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA </span><br /><span class="text-small">Regional Santander</span></p>
                         <h4 class="footer-subtitulo-2 mt-5">
                             <div class="fa fa-caret-right mr-2"></div>Gestores de repositorio
